correct welcome container overlapping footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,10 @@ html {
     width: 100%;
 }
 
+#index-html {
+    height:unset;
+}
+
 /* Center all content within the main semantic markup */
 main {
     display: flex;
